完善 Blog 管理、训练采集与平台体验 (#16)
## 变更内容

- 收敛 Blog API 历史功能与无效依赖，统一现阶段 Blog、训练和用户管理能力。
- 完善文章管理、ZIP 下载、全量备份、回收站、分类维护、评论与图片资源处理。
- 完善 Blog 与 Training 前端主题、导航、登录冷却、批量查询、管理交互和 Noto Emoji 展示。
- 规范用户与 OJ 账号数据写入、批量查询和数据库迁移，补充相关接口与测试。
- 调整自动采集窗口：每日按上次采集时间回溯 100 小时，半小时任务按上次采集时间回溯 0 小时。
- 更新部署配置、升级文档、架构文档、权限文档和 CHANGELOG。

## 变更原因

- 对齐当前单体 Blog API 与双 Vue 前端的实际运行边界。
- 减少已退役 NBlog 功能和重复逻辑，提升管理、查询、采集及部署升级的可维护性。
- 确保旧环境未配置新增采集参数时，也使用 100h/0h 的新默认逻辑且不覆盖既有配置与采集游标。

## 影响与升级说明

- 包含 V034、V035、V036 数据库迁移，部署前请按更新文档完成备份与检查。
- 自动采集开关仍默认关闭；升级不会重置数据库中的 `last_collected_at`，也不会改写既有 `.env`。
- 原有 About、Friend、Moment、访问日志、Quartz 等退役接口和页面已移除。

## 验证

- `mvn clean test`
- `mvn clean verify`
- `mvn clean package -DskipTests`
- 后端测试策略检查：358 项，0 失败，2 跳过
- Training 前端：lint、99 项测试、typecheck、生产构建通过
- Blog 前端：102 项测试、生产构建通过
- Compose 配置、文档同步和差异格式检查通过

---------

Co-authored-by: huangbingrui <huangbingrui.awa@bytedance.com>